# moving_square_bevy

./: .gitignore  Cargo.toml  README.md  windows_compile.sh
assets/levels/og4/: 0  1  2  3  info
src/: main.rs
src/data/: loader.rs  math.rs  mod.rs
src/game/: controller.rs  hud.rs  mod.rs  obstacle.rs  pause_menu.rs  player.rs  styles.rs
src/game/objects/: coin.rs  door.rs  mod.rs  obstacle.rs
src/menu/: interactions.rs  levels_menu.rs  main_menu.rs  mod.rs  score_menu.rs  styles.rs
